integrations/ava-check/test/types.js.flow
/* @flow */

import test from 'ava';
import { gen, check } from '../';

test('generates', check(gen.int, gen.string, (t, x, y) => {
  // $ExpectError
  t.true(x * y === 321)
  //         ^ string. The operand of an arithmetic operation must be a number.
}))
